--- a/app/views/account/signup/askusersemail.scala.html
+++ b/app/views/account/signup/askusersemail.scala.html
@@ -27,8 +27,6 @@
 </div>
 }{
 @Templates.pagemaincontent(){	
-
-
 <div class="container">
 	   <!-- Begin .row -->
 	<div class="row">      
@@ -45,7 +43,7 @@
 			  <div class="controls">
 				 <div class="input-prepend">
 					<span class="add-on"><i class="icon-envelope"></i></span>
-					<input  id="email" name="email" type="text" placeholder="myidentity@@myemail.domain" class="input-xlarge">
+					<input  id="email" name="email" type="text" placeholder="" class="input-xlarge">
 				</div>
 			  </div>
 			</div>
@@ -62,11 +60,8 @@
 	</div>
 </div>
 <script>var postregistering=true</script>			
-@Templates.su.jready{
-			
-}
-	
+@Templates.su.jready{			
+}	
 }
 }{
-@Templates.pagefooter(){ }
 }	
