--- a/app/views/controls.scala.html
+++ b/app/views/controls.scala.html
@@ -11,7 +11,7 @@
   <!-- Username -->
   <label class="col-sm-2 control-label"  for="username">Username</label>
   <div class="col-sm-10">
-	<div class="input-group"><span class="input-group-addon"><i class="icon-user"></i></span><input type="text" id="name" name="name" class="form-control" placeholder="Ex. yourname (Letters,numbers but no space)"></div>
+	<div class="input-group"><span class="input-group-addon"><i class="icon-user"></i></span><input type="text" id="name" name="name" class="form-control" placeholder=""></div>
   </div>
 </div>
 
@@ -24,7 +24,7 @@
   <div class="col-sm-10">
 	 <div class="input-group">
 		<span class="input-group-addon"><i class="icon-envelope"></i></span>
-		<input  id="email" name="email" type="text" placeholder="user@@myemail.com" class="form-control">
+		<input  id="email" name="email" type="text" placeholder="" class="form-control">
 	</div>
 	@if(Extras){
 	
@@ -41,7 +41,7 @@
   <div class="col-sm-10">
    <div class="input-group">
 		<span class="input-group-addon"><i class="icon-asterisk"></i></span>
-		<input  type="password" id="password" name="password" placeholder="Password (Atleast 5 chars)" class="form-control">
+		<input  type="password" id="password" name="password" placeholder="" class="form-control">
 	</div>
 	@if(Extras){
 	
@@ -59,7 +59,7 @@
   <div class="col-sm-10">
   	<div class="input-group">
 		<span class="input-group-addon"><i class="icon-asterisk"></i></span>
-		<input type="password" id="repeatPassword" name="repeatPassword" placeholder="Confirm Password (Atleast 5 chars)" class="form-control">
+		<input type="password" id="repeatPassword" name="repeatPassword" placeholder="" class="form-control">
 	</div>
 	@if(Extras){
 	
