--- a/app/views/spages/Help.scala.html
+++ b/app/views/spages/Help.scala.html
@@ -18,8 +18,8 @@
 		<!-- Begin .col-lg-12 -->
 		<div class="col-lg-12 col-12 col-md-12 col-xs-12 col-sm-12">
 			<div class="page-title">
-				<h1>Frequently Asked Questions</h1>
-<p class="intro">This is a short list of our most frequently asked questions. For more information about Boozology, or if you need support, please contact us.</p>
+				<h1>Frequently Asked Questions (FAQs)</h1>
+<p class="intro">This is a short list of our most frequently asked questions. For more information about Boozology, or if you need support, please <a href="./contactus" >contact us</a>.</p>
 
 			</div>
 			
@@ -31,20 +31,20 @@
 		
 		<!-- Begin .section -->
 		<div class="section">
-    <h3>Section title</h3>
+    <h3>Boozology Related</h3>
     <!-- Begin accordion  -->
 			<div class="panel-group" id="accordion">
   <div class="panel panel-default">
     <div class="panel-heading">
       <h4 class="panel-title">
         <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseOne">
-          <span class="arrow"><i class="icon-angle-right"></i></span>What is Boozology
+          <span class="arrow"><i class="icon-angle-right"></i></span>What's Boozology
         </a>
       </h4>
     </div>
     <div id="collapseOne" class="panel-collapse collapse in">
       <div class="panel-body">
-        Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+     	We're a community of people who love cool stuff. Here you can learn, discover, and talk about Boozy drinks and Booze related things.  
       </div>
     </div>
   </div>
@@ -52,13 +52,15 @@
     <div class="panel-heading">
       <h4 class="panel-title">
         <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo">
-          <span class="arrow"><i class="icon-angle-right"></i></span>How To Sign Up
+          <span class="arrow"><i class="icon-angle-right"></i></span>How to sign up for Boozology
         </a>
       </h4>
     </div>
     <div id="collapseTwo" class="panel-collapse collapse">
       <div class="panel-body">
-        Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+        To sign up for Boozology, please go <a href="../signup" >here </a>.
+You can also go the homepage (www.boozology.com) and hit the "Sign Up" button on the top menu bar.
+You can register via Facebook, Google+, Twitter, or with an email address.
       </div>
     </div>
   </div>
@@ -66,13 +68,13 @@
     <div class="panel-heading">
       <h4 class="panel-title">
         <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseThree">
-          <span class="arrow"><i class="icon-angle-right"></i></span>    Sed ut perspiciatis unde omnis iste
+          <span class="arrow"><i class="icon-angle-right"></i></span>How to "love" or "like" an item.
         </a>
       </h4>
     </div>
     <div id="collapseThree" class="panel-collapse collapse ">
       <div class="panel-body">
-        Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+       To like an item, scroll over the item you love and click the "Like it" button that hovers over the image.
       </div>
     </div>
   </div>
@@ -80,15 +82,71 @@
     <div class="panel-heading">
       <h4 class="panel-title">
         <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseFour">
-          <span class="arrow"><i class="icon-angle-right"></i></span>    Sed ut perspiciatis unde omnis iste
+          <span class="arrow"><i class="icon-angle-right"></i></span>How to view items you have liked
         </a>
       </h4>
     </div>
     <div id="collapseFour" class="panel-collapse collapse ">
       <div class="panel-body">
-        Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+       To view items that you have liked, please select the "My Page" button located in the upper right hand corner of the page.
+       
       </div>
     </div>
+    
+       <div class="panel panel-default">
+    <div class="panel-heading">
+      <h4 class="panel-title">
+        <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseFive">
+          <span class="arrow"><i class="icon-angle-right"></i></span>How to create and edit Collections
+        </a>
+      </h4>
+    </div>
+    <div id="collapseFive" class="panel-collapse collapse ">
+      <div class="panel-body">
+       To add an item to a collection, scroll over the 'like it' button until it reads, "Collect". Select the collection you want to add the image to or create a new collection at the bottom.
+	 When you are finished, click the blue "Add to collection" button.
+      </div>
+    </div>
+  </div>
+    
+       <div class="panel panel-default">
+    <div class="panel-heading">
+      <h4 class="panel-title">
+        <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseSix">
+          <span class="arrow"><i class="icon-angle-right"></i></span>How to install the "Magic" button
+        </a>
+      </h4>
+    </div>
+    <div id="collapseSix" class="panel-collapse collapse ">
+      <div class="panel-body">
+		To add things from other websites, drag the Magic button to your web browser.
+		<br>
+		If you're using Chrome, Safari or Firefox...
+		-Turn on your Bookmarks toolbar from the View menu.
+		
+      </div>
+    </div>
+  </div>    
+
+  
+         <div class="panel panel-default">
+    <div class="panel-heading">
+      <h4 class="panel-title">
+        <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseSeven">
+          <span class="arrow"><i class="icon-angle-right"></i></span>Follow Boozology
+        </a>
+      </h4>
+    </div>
+    <div id="collapseSeven" class="panel-collapse collapse ">
+      <div class="panel-body">
+		  Like us on <a href="https://www.facebook.com/boozologyOfficial">Facebook</a> and follow us on <a href="https://twitter.com/BOOZOLOGYdotCOM">Twitter</a> and <a href="http://www.pinterest.com/boozology/">Pinterest</a>! #Boozology
+		
+      </div>
+    </div>
+  </div> 
+    
+
+  
   </div>
 </div>
 <!-- End accordion -->
@@ -97,137 +155,11 @@
 		<!-- End .section -->
 
 <!-- Begin .section -->
-    <div class="section">
-    <h3>Section title</h3>
-    <!-- Begin accordion  -->
-      <div class="panel-group" id="accordion">
-  <div class="panel panel-default">
-    <div class="panel-heading">
-      <h4 class="panel-title">
-        <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapse1">
-          <span class="arrow"><i class="icon-angle-right"></i></span>What is Boozology
-        </a>
-      </h4>
-    </div>
-    <div id="collapse1" class="panel-collapse collapse in">
-      <div class="panel-body">
-        Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
-      </div>
-    </div>
-  </div>
-  <div class="panel panel-default">
-    <div class="panel-heading">
-      <h4 class="panel-title">
-        <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapse2">
-          <span class="arrow"><i class="icon-angle-right"></i></span>How To Sign Up
-        </a>
-      </h4>
-    </div>
-    <div id="collapse2" class="panel-collapse collapse">
-      <div class="panel-body">
-        Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
-      </div>
-    </div>
-  </div>
-   <div class="panel panel-default">
-    <div class="panel-heading">
-      <h4 class="panel-title">
-        <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapse3">
-          <span class="arrow"><i class="icon-angle-right"></i></span>    Sed ut perspiciatis unde omnis iste
-        </a>
-      </h4>
-    </div>
-    <div id="collapse3" class="panel-collapse collapse ">
-      <div class="panel-body">
-        Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
-      </div>
-    </div>
-  </div>
-   <div class="panel panel-default">
-    <div class="panel-heading">
-      <h4 class="panel-title">
-        <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapse4">
-          <span class="arrow"><i class="icon-angle-right"></i></span>    Sed ut perspiciatis unde omnis iste
-        </a>
-      </h4>
-    </div>
-    <div id="collapse4" class="panel-collapse collapse ">
-      <div class="panel-body">
-        Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
-      </div>
-    </div>
-  </div>
-</div>
-<!-- End accordion -->
-
-    </div>
+    
     <!-- End .section -->
 
     <!-- Begin .section -->
-    <div class="section">
-    <h3>Section title</h3>
-    <!-- Begin accordion  -->
-      <div class="panel-group" id="accordion">
-  <div class="panel panel-default">
-    <div class="panel-heading">
-      <h4 class="panel-title">
-        <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapse11">
-          <span class="arrow"><i class="icon-angle-right"></i></span>What is Boozology
-        </a>
-      </h4>
-    </div>
-    <div id="collapse11" class="panel-collapse collapse in">
-      <div class="panel-body">
-        Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
-      </div>
-    </div>
-  </div>
-  <div class="panel panel-default">
-    <div class="panel-heading">
-      <h4 class="panel-title">
-        <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapse22">
-          <span class="arrow"><i class="icon-angle-right"></i></span>How To Sign Up
-        </a>
-      </h4>
-    </div>
-    <div id="collapse22" class="panel-collapse collapse">
-      <div class="panel-body">
-        Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
-      </div>
-    </div>
-  </div>
-   <div class="panel panel-default">
-    <div class="panel-heading">
-      <h4 class="panel-title">
-        <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapse33">
-          <span class="arrow"><i class="icon-angle-right"></i></span>    Sed ut perspiciatis unde omnis iste
-        </a>
-      </h4>
-    </div>
-    <div id="collapse33" class="panel-collapse collapse ">
-      <div class="panel-body">
-        Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
-      </div>
-    </div>
-  </div>
-   <div class="panel panel-default">
-    <div class="panel-heading">
-      <h4 class="panel-title">
-        <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapse44">
-          <span class="arrow"><i class="icon-angle-right"></i></span>    Sed ut perspiciatis unde omnis iste
-        </a>
-      </h4>
-    </div>
-    <div id="collapse44" class="panel-collapse collapse ">
-      <div class="panel-body">
-        Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
-      </div>
-    </div>
-  </div>
-</div>
-<!-- End accordion -->
-
-    </div>
+    
     <!-- End .section -->
 		</div>
 		<!-- End .col-lg-8 -->
