--- a/app/views/blogpage.scala.html
+++ b/app/views/blogpage.scala.html
@@ -19,9 +19,9 @@
 		@if(controllers.Application.verifyEmail()){
 			<div class="row">
 				<div class="logout blbanner">
-					<div class="message"><span class="bold">Need to write a blog?? </span></div>
+					<div class="message"><span class="bold">Posts are ideas, stories, and facts added by the community. Click on add new post to create your own.</span></div>
 					<div class="options">
-						<div class="option"><a class="btn btn-danger brectangle btn-small" href="@routes.Application.GetAddBlog()">Write New Blog</a></div>
+						<div class="option"><a class="btn btn-danger brectangle btn-small" href="@routes.Application.GetAddBlog()">Add New Post</a></div>
 					</div>
 				</div>
 			</div>
