--- a/app/views/product.scala.html
+++ b/app/views/product.scala.html
@@ -211,28 +211,38 @@ margin-right:5%;
 							}
 						</div>
 						}
+						      @subjectPresent(){
+		            
+		            <div style="width: 100%;float: left;" >
+		               <ul class="list-inline" data-bind="with: presentprod">
+		            		<li>from:<a class="active" href="@routes.Application.PageRedirection(productx.siteurl)">@productx.pstore.name</a> by:<a class="active" href="@routes.Application.ContributorPage(productx.Founder.id).absoluteURL()">@productx.Founder.name</a>  </li>					    
+		               </ul>
+		                   <ul class="list-inline" data-bind="with: presentprod">
+		            		<li  id="ratingLabel" >Rate this product
+		            		 </li>
+		            		<li> <input id="@(productx.id)_ratting" class="rating"  value="@Application.getProductRating(productx.id)"  data-show-clear="false" data-show-caption="false" type="number" data-min="0" data-max="5" data-size="xs" data-step="1"  data-rtl="false"></input>
+					          </li>
+					          <li><div class="btn-sm">
+								<a id="remove-ratings" class="gray underline" href="javascript:void(0)" productId="@(productx.id)">Remove rating</a>					   
+					   			</div>
+					 		</li>					   
+						</ul>
+		  			</div>  
+		            }
+						
+						
+						
 					<div class="pull-left" style="position: relative;top:0;left:0;width: 100%;">
 					<ul class="list-inline" data-bind="with: presentprod">
 						<li><a href="javascript:void(0);" data-bind="click: $parent.lovestate,text: lovetext,css:lovetext()=='Love'?'btn btn-default':'btn btn-warning brectangle' "></a></li>
 						<li><a href="javascript:void(0);" data-bind="click: $parent.wantstate, clickBubble: false,text: wanttext,css:wanttext()=='Want'?'btn btn-default':'btn btn-warning brectangle' "></a></li>
 		                <li><a href="javascript:void(0);" data-bind="click: $parent.triedstate, clickBubble: false,text: triedtext,css:triedtext()=='Tried'?'btn btn-default':'btn btn-warning brectangle' "></a></li>
 		                <li><a class="btn btn-default" href="javascript:void(0);" data-bind="click: $parent.collectstate, clickBubble: false">Collect</a></li>
-		                @*<li><a class="label label-inverse spacecreater-vertical-small" href="@routes.Application.PageRedirection(productx.siteurl)">Visit the Page</a></li>*@
+		               <li><a class="btn btn-default" href="@routes.Application.PageRedirection(productx.siteurl)">Visit Website</a></li>
 		            </ul>
 		            
 		            </div>
-		            @subjectPresent(){
-		            <div style="width: 100%;float: left;" data-bind="with: presentprod">
-		               <label id="ratingLabel" style="float:left;margin-top: 5px;padding-left: 10px;">Did you like this Product? Rate it now!&nbsp&nbsp</label>	
-					   <input id="@(productx.id)_ratting" class="rating"  value="@Application.getProductRating(productx.id)"  data-show-clear="false" data-show-caption="false" type="number" data-min="0" data-max="5" data-size="xs" data-step="1"  data-rtl="false"></input>
-					   
-					   <div class="btn-sm">
-							<a id="remove-ratings" class="gray underline" href="javascript:void(0)" productId="@(productx.id)">
-								Remove Rating
-							</a>					   
-					   </div>
-		            </div>
-		            }
+
 		            @Templates.su.collpopko(){ }            
 				</div>
               
@@ -253,7 +263,10 @@ margin-right:5%;
 	                  </div>     
 	                  	@if(controllers.Application.verifyEmail()){
                   	 		<button type="submit" class="btn btn-default orange">Send</button>
-                  		}            
+                  		}else { 
+                  	 		<label style="font-size:12px;color:red">You must verify your email before you can comment</label>
+                  		}                 
+                  		        
                 	</form>
 				</div>
 				<!-- End post-comment-form -->
