--- a/app/views/spages/Aboutus.scala.html
+++ b/app/views/spages/Aboutus.scala.html
@@ -26,7 +26,7 @@
   <!-- Begin .user-act -->
   <div class="user-act">
     
-    <h3>Boozology is a curated collection of the world's best products and stores.</h3>
+    <h3>Welcome to the world of Boozology!</h3>
     <div class="clearfix"></div>
     <ul class="log-menu">
       <li><a href="#" class="btn btn-default login">Login</a></li>
@@ -45,20 +45,20 @@
 
 		<!-- Begin .col-lg-8 -->
 		<div class="col-lg-9 col-md-9 col-sm-9 col-xs-12 col-12">
-	<p class="intro">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</p>	
+	<p class="intro">We're a community of people who love cool stuff and we're excited to have you on board. Here you can learn, discover, and talk about Boozy drinks and Booze related things!</p>	
 	
   <ul class="list-caret">
     <li>
-      <p><i class="icon-caret-right"></i>  Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab</p>
+      <p><i class="icon-caret-right"></i>Find stuff you love</p>
     </li>
     <li>
-      <p><i class="icon-caret-right"></i>  Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab</p>
+      <p><i class="icon-caret-right"></i>Save your favorite products to your profile. Or use our magic button to save products from any store online.</p>
     </li>
     <li>
-      <p><i class="icon-caret-right"></i>  Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab</p>
+      <p><i class="icon-caret-right"></i>Follow people you like and see what they share.</p>
     </li>
     <li>
-      <p><i class="icon-caret-right"></i>  Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab</p>
+      <p><i class="icon-caret-right"></i>You can also create awesome collections! Collections are a great way to organize your products around a theme or event.</p>
     </li>
   </ul>
 		</div>
