--- a/app/views/Templates/su/signin.scala.html
+++ b/app/views/Templates/su/signin.scala.html
@@ -7,7 +7,7 @@
     <div class="text-center">
     	<span>
     	
-    	Login with Facebook or Twitter and join the fun! </span>
+    	Log in with Facebook or Twitter </span>
     	 
 		<div class="clearfix padding-small"></div></br>
     	@_providerPartial(skipCurrent=false)
@@ -15,7 +15,7 @@
     </br>
     <div id=labelemail >
     	<a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseOne">
-        <span>or login with your email address and password.</span>
+        <span>or log in with your email address and password.</span>
         </a>
         </div>  
         </br>
