--- a/app/views/Templates/MasterTemplate.scala.html
+++ b/app/views/Templates/MasterTemplate.scala.html
@@ -18,7 +18,7 @@
     // TODO: The current logged in user's full name
     name: "Joe",
     // TODO: The current logged in user's email address.
-    email: "support@boozology.com",
+    email: "support@@boozology.com",
     // TODO: The current logged in user's sign-up date as a Unix timestamp.
     created_at: 1234567890,
     app_id: "3ilias4w"
