--- a/app/views/Tools/confirm.scala.html
+++ b/app/views/Tools/confirm.scala.html
@@ -146,7 +146,7 @@
 				</div>
 				
 				<div >
-				  <label class="control-label"  for="labels">Labels :</label>
+				  <label class="control-label"  for="labels">Tags:</label>
 				  <div >
 					<input name="labels" id="labels"/>
 				  </div>
@@ -173,20 +173,7 @@
 					
 					
 				</div>
-					
-					
-					  
-					
-					
-				  
-				
-				
-				
-				  
-				  
-				  
-				
-				
+
 				<div class="help-block text-center">
 					<button type="submit" class="btn btn-large btn-info">Add this Product</button>
 				</div>
