--- a/app/views/spages/Aboutus.scala.html
+++ b/app/views/spages/Aboutus.scala.html
@@ -29,9 +29,9 @@
     <h3>Welcome to the world of Boozology!</h3>
     <div class="clearfix"></div>
     <ul class="log-menu">
-      <li><a href="#" class="btn btn-default login">Login</a></li>
+      <li><a href="../login" class="btn btn-default login">Log in</a></li>
       <li>or</li>
-      <li><a href="#" class="btn btn-default sign-up">Sign Up</a></li>
+      <li><a href="../signup" class="btn btn-default sign-up">Sign Up</a></li>
     </ul>
   </div>
   <!-- End user-act -->
@@ -46,22 +46,37 @@
 		<!-- Begin .col-lg-8 -->
 		<div class="col-lg-9 col-md-9 col-sm-9 col-xs-12 col-12">
 	<p class="intro">We're a community of people who love cool stuff and we're excited to have you on board. Here you can learn, discover, and talk about Boozy drinks and Booze related things!</p>	
+
+</div>
+
+  <div class="row">
+      <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 col-12">
+			<div class="row text-center">
+      		 <img src=https://s3-us-west-2.amazonaws.com/com.gold.byrepo08/assets/aboutusbooz-02.png  alt="Find stuff you love">  
+      		</div>
+      </div>
+      <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 col-12">
+      		<div class="row text-center">
+      			<img src=https://s3-us-west-2.amazonaws.com/com.gold.byrepo08/assets/aboutusbooz-03.png  alt="Use our magic button">
+   			</div>
+   	</div>
+  </div>
+   
+   <div class="row">
+      <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 col-12">
+			<div class="row text-center">
+      		<img src=https://s3-us-west-2.amazonaws.com/com.gold.byrepo08/assets/aboutusbooz-04.png  alt="Share with friends">  
+      		</div>
+      </div>
+      <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 col-12">
+      		<div class="row text-center">
+      			<img src=https://s3-us-west-2.amazonaws.com/com.gold.byrepo08/assets/aboutusbooz-05.png   alt="Create amazing collections">
+   			</div>
+   	</div>
+  </div>
+  
 	
-  <ul class="list-caret">
-    <li>
-      <p><i class="icon-caret-right"></i>Find stuff you love</p>
-    </li>
-    <li>
-      <p><i class="icon-caret-right"></i>Save your favorite products to your profile. Or use our magic button to save products from any store online.</p>
-    </li>
-    <li>
-      <p><i class="icon-caret-right"></i>Follow people you like and see what they share.</p>
-    </li>
-    <li>
-      <p><i class="icon-caret-right"></i>You can also create awesome collections! Collections are a great way to organize your products around a theme or event.</p>
-    </li>
-  </ul>
-		</div>
+		
 		<!-- End .col-lg-8 -->
     <div class="clearfix"></div>
 
