--- a/app/views/account/signup/walkthrough.scala.html
+++ b/app/views/account/signup/walkthrough.scala.html
@@ -20,21 +20,39 @@
 		        	<legend class="">Welcome to the world of Boozology !</legend> 		        </div>
 		        <p>We're a community of people who love cool stuff and we're excited to have you on board.<br/>
 		         Let's get you started with a quick tour...</p>
-		         <img src="@controllers.HomePageImages.imagePathWelcome()" class="img-responsive" alt="">
+		            <div class="row">
+      				<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 col-12">
+      				<div class="row text-center">
+		         <img src="@controllers.HomePageImages.imagePathWelcome()"  alt="Welcome">
+		            </div>
+      				</div>
+      				</div>
 		    </section>
 		    <h3></h3>
 		    <section>
 		        <div id="legend">
 		        	<legend class="">Save your favorite products to your profile.</legend> 		        </div>
 		        <p>Or use our <a href="" onClick="divFunction()">magic button</a> to save products from any place online.</p>
-		         <img src="@controllers.HomePageImages.imagePathProduct()"  class="img-responsive" alt="">
+		            <div class="row">
+      				<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 col-12">
+      				<div class="row text-center">		         
+		         <img src="@controllers.HomePageImages.imagePathProduct()"  alt="Save your fav products">
+		         		            </div>
+      				</div>
+      				</div>
 		    </section>
 		    <h3></h3>
 		    <section>
 		    	<div id="legend">
 		        	<legend class="">Follow people you like and see what they share.</legend> 	
 		    	</div>
-		        <img src="@controllers.HomePageImages.imagePathFollow()" class="img-responsive" alt="">
+		    			            <div class="row">
+      				<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 col-12">
+      				<div class="row text-center">	
+		        <img src="@controllers.HomePageImages.imagePathFollow()"alt="Follow friends">
+		        		            </div>
+      				</div>
+      				</div>
 		    </section>
 		    <h3></h3>
 		    <section>
@@ -42,7 +60,13 @@
 		        	<legend class="">Collect your favorite products</legend> 
 		        </div>
 		        <p>Collections are a great way to organize stuff you love around a theme or event.</p>
-		         <img src="@controllers.HomePageImages.imagePathCollection()" class="img-responsive" alt="">
+		        		    			            <div class="row">
+      				<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 col-12">
+      				<div class="row text-center">
+		         <img src="@controllers.HomePageImages.imagePathCollection()"  alt="Create collections">
+		         		        		            </div>
+      				</div>
+      				</div>
 		    </section>
 		    <h3></h3>
 		    <section>
@@ -50,7 +74,13 @@
 		        	<legend class="">Share a Post in our Buzz section</legend> 
 		        </div>
 		        <p>Posts are ideas and stories added by the community.</p>
-		         <img src="@controllers.HomePageImages.imagePathBlog()" class="img-responsive" alt="">
+		        		        		    			            <div class="row">
+      				<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 col-12">
+      				<div class="row text-center">
+		         <img src="@controllers.HomePageImages.imagePathBlog()"  alt="Share ideas">
+		         		        		            </div>
+      				</div>
+      				</div>
 		    </section>
 	</div>
 
