custom error pages

--- a/app/views/shop.scala.html
+++ b/app/views/shop.scala.html
@@ -28,7 +28,7 @@ width:70px;height:70px;vertical-align: baseline!important;
 
 
 @Templates.MasterTemplate(){
-	@Templates.pagehead("Shop @Boozology"){@ps}
+	@Templates.pagehead(" Boozology"){@ps}
 }{
 	@Templates.pageheader(){		
 				
